<resources>
    <string name="app_name">PNR</string>
    <string name="action_settings">Settings</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="purush_gmail_com">purush@gmail.com</string>
    <string name="accounts">Accounts</string>
    <string name="kanakaveedu">Kanakaveedu</string>
    <string name="purushotham">Purushotham</string>
    <string name="user_accounts">User Accounts</string>
    <string name="layout">layout</string>
    <string name="change_password_login">Change Password? Login</string>
    <string name="terms_amp_conditions"><u><![CDATA[Terms&Conditions]]></u></string>
    <string name="update">UPDATE</string>
</resources>
