<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_user_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:background="@drawable/layer_out"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:id="@+id/name"
                        android:text="@string/purushotham"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:id="@+id/Location"
                        android:text="@string/kanakaveedu"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:max="5"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="end"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="end"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:ellipsize="end"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="0dp"
                        android:maxLines="1"
                        android:id="@+id/Contacts"
                        android:text="@string/accounts"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"
                       />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="0dp"
                        android:gravity="end"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:id="@+id/count"
                        android:text="25"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>

        </LinearLayout>
        <include layout="@layout/divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:ellipsize="end"
                android:maxLines="1"
                android:id="@+id/Mobile"
                android:text="+91-8500822510"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/mobile_number"
                android:layout_marginLeft="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_supervisor_account_black_24dp"/>
        </LinearLayout>
        <include layout="@layout/divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:id="@+id/textViewName"
                android:text="@string/purush_gmail_com"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/email_pencil"
                android:visibility="visible"
                android:layout_gravity="center"
                android:src="@drawable/ic_supervisor_account_black_24dp"/>
        </LinearLayout>
        <include layout="@layout/divider" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:clickable="true"
            android:id="@+id/accounts_layout"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_accounts"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/dropdown"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/layout" />
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewUsers"
            android:visibility="gone"
            android:background="@drawable/layer_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
